a little fun with array

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p>Back to our definition. I was saying array in javascript gives us an object power. Any wonders you can imagine can be exert on array.</p>
                 <p>It syntax is fun too. <code>[//lolo]</code>, it just cant be fun than that. It can take in just almost anything from numbers to string to alphanumeric rubbish and even images. What a wawu</p>
                 <p>Check this out: <code>['sola','werepe', 45,'lol']</code>. You can pass them to a named variable too like this
-                <code>var anotherArray =['sola','werepe', 45,'lol']</code>. Also try log it to the console(<code>console.log(anotherArray)//Array(4) [ "sola", "werepe", 45, "lol" ]</code>). This is just the beginning. GET READY TO HAVE SOFT FUN LEARNING THE POWER OF ARRAY </p>
+                <code>var anotherArray =['sola','werepe', 45,'lol']</code>. Also try log it to the console(<code>console.log(anotherArray)//Array(4) [ "sola", "werepe", 45, "lol" ]</code>). This is just the beginning. GET READY TO HAVE SOFT FUN LEARNING THE POWER OF ARRAY. </p>
             </article>
             <article>
                 <div class="card text-white bg-success mb-3" style="max-width: 68rem;">
@@ -58,9 +58,49 @@
                     </div>
             </div>
             </article>
+            <hr>
+            <section>
+                <h3>PART A: Array declaration</h3>
+                Array can be simple declared in two ways:
+                <ul>
+                    <li>the use of literals. That is the two brackets: [ ], or</li>
+                    <li>the use of the array command:Array().</li>
+                </ul>
+                <p>However, it is quick to know that both ways accomplish same mission, the mission being to declare an array. </p>
+                <p>Therefore, it most likely you see most developers choose one way and stick to using it. For me I use both, depending on some factors. Dont worry by the time you build the expected converter you will know why I sometimes use both.</p>
+                <p>But for beginners, I recommend sticking the first way. So in this first part i will use the bracket almost through.</p>
+                <p>Go to your desired editor and create a folder, I named mine array. After which you can simple make a file and name it array.html. create the usual html 5 rubbish, with a script( I am not being rigid here just make an environment lets code is all I am concerned about.)</p>
+                <p>After you've done the above, lets get ready to have fun proper</p>
+                <p>We were talking about declaration of array. By simple typing <code>[]</code> does the job. HURRAY!!!: You just declared an array. Go on and pass list of items in there. Remember, I said array simple means list ABI??</p>
+                <p>
+                    <pre>
+                        <code>
+                        ['list1','list2','list3']
+                        //pass it to a variable named foo
+                        let foo  =['list1','list2','list3']
+                        //you can now declare foo with a console
+                        console.log(foo)//Array(3)['list1','list2','list3']</code>
+                    </pre></p>
+        <p>Nice one there. We can now try that other method, you are correct the array command</p>
+        <p><code>
+            <pre>
+                Array('list1','list2','list3')
+                //pass it to a variable named foo
+                let foo  = Array('list1','list2','list3')
+                //you can now declare foo with a console
+                console.log(foo)//Array(3)['list1','list2','list3']
+            </pre></code></p>
+            <p>That is all about array declaration. Thats why I love array. Soon we will start doing magic with this, Thumbs up if you follow through.</p>
+            </section>
+            <footer>This article is written with all the <span class="love">love</span> in the world by kelvinsekx: put kelvinsekx on google to more about me.</footer>
         </div>
         </div>        
     </main>
+    <script>
+        let foo  = Array('list1','list2','list3')
+        console.log(foo);
+        
+    </script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script><script src="/docs/4.3/assets/js/docs.min.js"></script>
    
